feat: improve assignments, agent availability, notifications and audit